--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "jasmine": "^2.4.1"
   },
   "devDependencies": {
-    "jasmine": "^2.4.1"
+    "jasmine": "^2.4.1",
+    "typescript": "^2.0.10"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
