--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "devDependencies": {
     "jasmine": "^2.4.1",
-    "typescript": "^2.0.10"
+    "typescript": "2.0.8"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
